tests/paczka1/fuzzy1/93431160.err
Error in line 10: 4vS A755 27,8
Error in line 16: uWTZLHwb S62 5,8
Error in line 2: OVJnuDXO A73 75,0
Error in line 20: OVJnuDXO S771 38,4
Error in line 27: OVJnuDXO A755 75,4
Error in line 28: OVJnuDXO S62 65,2
